<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">RemindApp</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="username_ek1_string">Username</string>
	<string name="password_string">Password</string>
	<string name="hi_string">Hi</string>
	<string name="welcome_again__string">Welcome Again!</string>
	<string name="please_fill_in_your_correct_details__string">Please fill in your correct details.</string>
	<string name="login_string">Login</string>
	<string name="continue_with_google_string">Continue with GOOGLE</string>
	<string name="or_string">or</string>
	<string name="_create_new_account_string">Create New Account</string>
	<string name="phone_number_string">Phone Number</string>
	<string name="create_your_string">Create your</string>
	<string name="account__today__string">Account, Today!</string>
	<string name="create_account_string">Create Account</string>
	<string name="sign_in_to_your_account_string">Sign In to your Account</string>
	<string name="your_phone_has_been_string">Your Phone has been</string>
	<string name="verified_string">Verified</string>
	<string name="all_tasks_string">All Tasks</string>
	<string name="_today_string">Today</string>
	<string name="_tomorrow_string">Tomorrow</string>
	<string name="_upcomming_string">Upcomming</string>
	<string name="_someday_string">Someday</string>
	<string name="i_want_____string">I  want ...</string>
	<string name="my_day_string">My Day</string>
	<string name="calendar_string">Calendar</string>
	<string name="search_for_task__events__notes__etc___string">Search for task, events, notes, etc..</string>
	<string name="easily_manage_your_team_s_work_with_project_boards__customized_workflows_and_integrations_string">Easily manage your teams work with projectboards, customized workflows and integrations</string>
	<string name="my_list_string">My List</string>
	<string name="workspace_string">Workspace</string>
	<string name="grocery_list_string">Grocery List</string>
	<string name="work_string">Work</string>
	<string name="personal_string">Personal</string>
	<string name="back"><![CDATA[<-]]></string>
	<string name="forward"><![CDATA[->]]></string>
	<string name="event_details_string">Event Details</string>
	<string name="fiday__april_07_string">Fiday, April 07</string>
	<string name="alarm_string">Alarm</string>
	<string name="notes_string">Notes</string>
	<string name="_edit_string">Edit</string>
	<string name="jumat_agung_string">Jumat Agung</string>
	<string name="selanjutnya_string">Hapus Acara</string>
	<string name="edit_acara_string">Edit Acara</string>
	<string name="selesai_string">Selesai</string>
	<string name="_batalkan_string">Batalkan</string>
	<string name="lokasi_string">Lokasi</string>
	<string name="jumat_agung_ek1_string">Jumat Agung</string>
	<string name="mulai_string">Mulai</string>
	<string name="url_string">URL</string>
	<string name="_catetan_string">Catetan</string>
	<string name="berakhir_string">Berakhir</string>
</resources>