<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="match_parent" >
	<RelativeLayout android:id="@+id/login_page"
		android:layout_width="wrap_content"
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container"
			android:layout_width="match_parent"
			android:layout_height="match_parent" >

			<View
				android:id="@+id/_bg__login_page"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@drawable/_bg__login_page_shape" />


			<RelativeLayout
				android:id="@+id/username"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="32.5dp"
				android:layout_marginTop="265dp">

				<View
					android:id="@+id/rectangle_3"
					android:layout_width="325dp"
					android:layout_height="50dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/rectangle_3_shape" />

				<EditText
					android:id="@+id/username_ek1"
					android:layout_width="250dp"
					android:layout_height="50dp"
					android:layout_marginLeft="26dp"
					android:layout_marginTop="0dp"
					android:hint="@string/username_ek1_string"
					android:textColor="@color/_bg__login_page_color"
					android:textSize="17sp" />

			</RelativeLayout>


			<RelativeLayout android:id="@+id/pass"
				android:layout_marginTop="337dp"
				android:layout_marginStart="32.5dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/rectangle_5"
					android:background="@drawable/rectangle_5_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="325dp"
					android:layout_height="50dp" />

				<EditText
					android:id="@+id/password"
					android:layout_width="250dp"
					android:layout_height="50dp"
					android:layout_marginLeft="26dp"
					android:layout_marginTop="0dp"
					android:inputType="textPassword"
					android:hint="@string/password_string"
					android:textColor="@color/_bg__login_page_color"
					android:textSize="17sp" />

			</RelativeLayout>


			<RelativeLayout android:id="@+id/heading"
				android:layout_marginTop="102dp"
				android:layout_marginStart="32.5dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<TextView android:id="@+id/hi"
					android:textSize="33sp"
					android:textColor="@color/rectangle_3_color"
					android:layout_marginLeft="7dp"
					android:layout_marginTop="0dp"
					android:layout_width="70dp"
					android:layout_height="63dp"
					android:text="@string/hi_string"
					 />

				<TextView android:id="@+id/welcome_again_"
					android:textStyle="bold"
					android:textSize="37sp"
					android:textColor="@color/welcome_again__color"
					android:layout_marginLeft="0dp"
					android:layout_marginTop="30dp"
					android:layout_width="320dp"
					android:layout_height="70dp"
					android:text="@string/welcome_again__string"
					 />

				<TextView
					android:id="@+id/please_fill_in_your_correct_details_"
					android:layout_width="276dp"
					android:layout_height="35dp"
					android:layout_marginLeft="0dp"
					android:layout_marginTop="88dp"
					android:text="@string/please_fill_in_your_correct_details__string"
					android:textColor="@color/rectangle_3_color"
					android:textSize="18sp" />

			</RelativeLayout>


			<RelativeLayout android:id="@+id/create_2_btn"
				android:layout_marginTop="410dp"
				android:layout_marginStart="32.5dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/rectangle_5_ek1"
					android:background="@drawable/rectangle_5_ek1_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="325dp"
					android:layout_height="50dp" />

				<TextView
					android:id="@+id/login"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="137dp"
					android:layout_marginTop="13dp"
					android:text="@string/login_string"
					android:textColor="@color/rectangle_3_color"
					android:textSize="20sp" />

			</RelativeLayout>


			<RelativeLayout android:id="@+id/google"
				android:layout_marginTop="507dp"
				android:layout_marginStart="32.5dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/rectangle_5_ek2"
					android:background="@drawable/rectangle_5_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="325dp"
					android:layout_height="50dp" />

				<TextView
					android:id="@+id/continue_with_google"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="57dp"
					android:layout_marginTop="13dp"
					android:text="@string/continue_with_google_string"
					android:textColor="@color/rectangle_3_color"
					android:textSize="20sp" />

			</RelativeLayout>


			<TextView
				android:id="@+id/or"
				android:layout_width="54.5dp"
				android:layout_height="47.5dp"
				android:layout_marginLeft="182.5dp"
				android:layout_marginTop="466dp"
				android:text="@string/or_string"
				android:textColor="@color/rectangle_3_color"
				android:textSize="25sp" />

			<RelativeLayout android:id="@+id/signin"
				android:layout_marginTop="575dp"
				android:layout_marginStart="32.5dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/rectangle_5_ek3"
					android:background="@drawable/rectangle_5_ek3_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="329dp"
					android:layout_height="54dp" />

				<TextView android:id="@+id/_create_new_account"
					android:textSize="20sp"
					android:textColor="@color/welcome_again__color"
					android:layout_marginLeft="69dp"
					android:layout_marginTop="13dp"
					android:layout_width="213dp"
					android:layout_height="38dp"
					android:text="@string/_create_new_account_string"
					 />

			</RelativeLayout>

		</RelativeLayout>

	</RelativeLayout>
</RelativeLayout>